--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -33,33 +33,53 @@
         android:id="@+id/textView1"
         android:layout_width="91dp"
         android:layout_height="38dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="73dp"
-        android:layout_marginEnd="43dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="36dp"
         android:gravity="center"
         android:text="이름"
-        app:layout_constraintEnd_toStartOf="@+id/name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="91dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="36dp"
+        android:gravity="center"
+        android:text="기록"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="172dp"
         android:layout_height="30dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="44dp"
         android:gravity="center"
         android:hint="이름"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView1"
         app:layout_constraintTop_toBottomOf="@+id/profile" />
+
+    <TextView
+        android:id="@+id/recordText"
+        android:layout_width="172dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="44dp"
+        android:gravity="center"
+        android:hint="기록"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <Button
         android:id="@+id/ViewLikesBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="92dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="24dp"
         android:text="좋아요 목록 보기"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recordText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
