--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -10,8 +10,8 @@
         android:id="@+id/playlist_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="24dp"
         android:text="playlist name"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,29 +21,41 @@
         android:id="@+id/playlist_start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
         android:text="시작"
         app:layout_constraintStart_toEndOf="@+id/playlist_add_button"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/editPlaylistButton" />
 
     <Button
         android:id="@+id/playlist_add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="204dp"
         android:layout_marginTop="16dp"
         android:text="추가"
-        app:layout_constraintStart_toEndOf="@+id/playlist_name_text"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editPlaylistButton" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlist_recycler_view"
         android:layout_width="409dp"
-        android:layout_height="600dp"
-        android:layout_marginTop="36dp"
-        app:layout_constraintTop_toBottomOf="@+id/playlist_name_text"
-        tools:layout_editor_absoluteX="1dp" />
+        android:layout_height="500dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playlist_add_button" />
+
+    <ImageButton
+        android:id="@+id/editPlaylistButton"
+        android:layout_width="69dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="4dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintStart_toEndOf="@+id/playlist_name_text"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/edit" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
