--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,14 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/skyBlue"
+    android:gravity="center"
     android:orientation="horizontal"
     tools:context=".LoginActivity">
 
     <Button
         android:id="@+id/btn2"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="로그인" />
+        android:backgroundTint="@color/skyBlue"
+        android:text="로그인"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:cornerRadius="20dp" />
 
 </LinearLayout>
