--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -21,6 +21,9 @@
 
     <Button
         android:id="@+id/backBtn"
+        android:backgroundTint="@color/skyBlue"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_width="104dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
@@ -75,6 +78,9 @@
 
     <Button
         android:id="@+id/ViewLikesBtn"
+        android:backgroundTint="@color/skyBlue"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
