--- a/app/src/main/res/layout/activity_playing_music.xml
+++ b/app/src/main/res/layout/activity_playing_music.xml
@@ -52,6 +52,9 @@
 
     <Button
         android:id="@+id/audioStreamBtn"
+        android:backgroundTint="@color/skyBlue"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -62,6 +65,9 @@
 
     <Button
         android:id="@+id/back_button"
+        android:backgroundTint="@color/skyBlue"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -82,6 +88,9 @@
 
     <Button
         android:id="@+id/comment"
+        android:backgroundTint="@color/skyBlue"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="164dp"
