--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -19,6 +19,9 @@
 
     <Button
         android:id="@+id/playlist_start_button"
+        android:backgroundTint="@color/skyBlue"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
@@ -29,6 +32,9 @@
 
     <Button
         android:id="@+id/playlist_add_button"
+        android:backgroundTint="@color/skyBlue"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="204dp"
