--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,9 @@
 
             <Button
                 android:id="@+id/add_playlist_button"
+                android:backgroundTint="@color/skyBlue"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="플레이리스트 추가" />
