--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="monoBlack">#3B3B3B</color>
+    <color name="skyBlue">#87CEFA</color>
 </resources>
