--- a/app/src/main/res/layout/activity_you_need_login.xml
+++ b/app/src/main/res/layout/activity_you_need_login.xml
@@ -21,10 +21,19 @@
         android:id="@+id/goto_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="24dp"
         android:text="로그인하러 가기"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toEndOf="@+id/show_ad_button"
+        app:layout_constraintTop_toBottomOf="@+id/you_need_login_image" />
+
+    <Button
+        android:id="@+id/show_ad_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="24dp"
+        android:text="광고 보고 끝까지 듣기"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/you_need_login_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
