--- a/app/src/main/res/layout/activity_edit_playlist.xml
+++ b/app/src/main/res/layout/activity_edit_playlist.xml
@@ -10,7 +10,7 @@
         android:id="@+id/playlist_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="16dp"
         android:hint="playlist name"
         android:textSize="20dp"
@@ -30,11 +30,11 @@
         android:id="@+id/finishEditPlaylistButton"
         android:layout_width="109dp"
         android:layout_height="62dp"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="28dp"
         android:scaleType="fitCenter"
         android:text="수정 완료"
-        app:layout_constraintStart_toEndOf="@+id/playlist_name_text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
