--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -10,8 +10,8 @@
         android:id="@+id/playlist_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
         android:text="playlist name"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,14 +19,14 @@
 
     <Button
         android:id="@+id/playlist_start_button"
-        android:backgroundTint="@color/skyBlue"
-        android:textStyle="bold"
-        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="@color/skyBlue"
         android:text="시작"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/playlist_add_button"
         app:layout_constraintTop_toBottomOf="@+id/editPlaylistButton" />
 
@@ -47,7 +47,7 @@
         android:id="@+id/playlist_delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/skyBlue"
         android:text="삭제"
@@ -69,10 +69,10 @@
         android:id="@+id/editPlaylistButton"
         android:layout_width="69dp"
         android:layout_height="62dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="28dp"
         android:scaleType="fitCenter"
-        app:layout_constraintStart_toEndOf="@+id/playlist_name_text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/edit" />
 
